package GridThings;

public class BlankMarkedBox extends GridThing{
    public BlankMarkedBox(int ni, int nj) {
        super(ni, nj);
    }
}
