package GridThings;

public class Player extends GridThing{
    public Player(){
        super(0, 0);
    }
    public Player(int ni, int nj){
        super(ni, nj);
    }
}
