package GridThings;

public class Wall extends GridThing{
    public Wall(int ni, int nj){
        super(ni, nj);
    }
}
