package MainPackage;

public interface Observer {
    void stateChanged();
    void setModel(GameModel model);
}
