package MainPackage;

public interface Strategy {
    int moveType();
}
